# ImageRetriever

./: .gitignore  Cargo.toml  LICENSE  README.md
image_retriever/: Cargo.toml
image_retriever/src/: main.rs  requests.rs
